# competitive-programming

./: .gitignore
Codeforces/CF-865-2/A/: main
Codeforces/CF-865-2/B/: main  main.cpp
Codeforces/CF-865-2/C/: main.cpp
Codeforces/CF-873-2/B/: main
Codeforces/CF-873-2/D/: main.cpp
Codeforces/CF-875-2/B/: main
Codeforces/CF-875-2/C/: main
Codeforces/CF-877-2/A/: main  main.cpp
Codeforces/CF-877-2/B/: main.cpp
Codeforces/CF-877-2/C/: main.cpp
Codeforces/CF-877-2/D/: main.cpp
Codeforces/CF-880-2/A/: main.cpp
Codeforces/CF-880-2/B/: main.cpp
Codeforces/CF-880-2/C/: main.cpp
Codeforces/CF-887-2/A/: main.cpp
Codeforces/CF-887-2/B/: main
Codeforces/CF-887-2/C/: main.cpp
Codeforces/CF-892-2/B/: main  main.cpp
Codeforces/CF-892-2/C/: main.cpp
Codeforces/CF-892-2/D/: main  main.cpp
Codeforces/CF-893-2/B/: main  main.cpp
Codeforces/CF-893-2/C/: main.cpp
Codeforces/CF-893-2/D/: main  main.cpp
Codeforces/CF-919-2/D/: main  main.cpp
Codeforces/CF-919-2/E/: main.cpp
Codeforces/CF-920-3/A/: main
Codeforces/CF-920-3/B/: main.cpp
Codeforces/CF-920-3/F/: main  main.cpp
Codeforces/CF-920-3/G/: main  main.cpp
Codeforces/HSS-2023/A/: main  (+1 more)
interviews/jp-morgan/: A.cpp  main.cpp
interviews/tiktok/: Report
usaco-guide/advanced/interactive-and-communication/INFO1CUP-2017-easter-eggs/: CMakeLists.txt  eggs.cpp  grader.cpp  grader.h
usaco-guide/advanced/interactive-and-communication/IOI-2013-cave/: CMakeLists.txt  cave.cpp  graderlib.c
usaco-guide/advanced/interactive-and-communication/IOI-2017-coins/: CMakeLists.txt  coins.cpp
(+1760 files in other folders)
